# stock-trends

./: .env.example  .gitignore  AGENTS.md  AI_INSTRUCTIONS.md  LICENSE  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  ticker_analysis.py
config/: tickers.example.txt  tickers.txt
docs/: understanding_analysis_results.md
models/: lgb_results_20250919_223526.json  lgb_split_0_20250919_221358.txt  lgb_split_1_20250919_221358.txt  lgb_split_2_20250919_223526.txt  lgb_summary_20250919_221358.json  lightgbm_results_20250919_224044.json  model_comparison_report.json  simple_backtest_20250919_224434.json  transformer_results_20250919_225249.json  transformer_summary_20250919_225249.json
reports/: lightgbm_explainability_report_20250919_225843.json  prediction_explanation_report_20250919_230100.json  validation_report_20250919_230212.json  validation_report_20250919_230251.json
scripts/: generate_toc.py
src/backtest/: backtest_engine.py  run_model_backtests.py  simple_backtest.py
src/explainability/: model_explainer.py  model_validator.py  shap_explainer.py
src/features/: feature_engineering.py
src/ingestion/: __init__.py  config.py  equity_prices.py  macro_data.py  news_data.py
src/models/: compare_models.py  lightgbm_model.py  multi_model_trainer.py  temporal_transformer.py  train_baselines.py  train_efficient_baselines.py  train_lightgbm.py  train_simple_baseline.py  train_transformer.py
src/preprocess/: weekly_aggregator.py
src/utils/: data_splits.py  env_utils.py  ticker_manager.py
tests/: __init__.py  test_pipeline.py
